backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: go-todo-app-backend
  name: go-todo-app-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-todo-app-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: go-todo-app-backend
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
      - image: 882437029250.dkr.ecr.us-east-1.amazonaws.com/go-todo-app-backend:3565b38753b0bda82917728ac5a423b7712c379e
        name: go-todo-app-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        resources: {}
status: {}
