frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-todo-app-frontend
spec:
  type: ClusterIP
  selector:
    app: go-todo-app-frontend
  ports:
    - port: 80
      targetPort: 80
