Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfront-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
      
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: go-todo-app-backend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-todo-app-frontend-service
            port:
              number: 80
